[package]
name = "raycast-api-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-stream = "0.3.5"
async-trait = "0.1.78"
axum = { version = "0.7.4", features = ["ws"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
futures = "0.3.30"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
regex-lite = "0.1.5"
reqwest = { version = "0.12.0", features = [
    "json",
    "trust-dns",
    "hickory-dns",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typed-builder = "0.18.1"
